Use String.isEmpty.
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>